           room for future enhancements. The zoom buttons, bar length, date range and recent chart controls
           are converted to buttons with popup menus.

20110215:  More experimenting with gui elements. Moved the bottom toolbar and placed it above the plot slider.
           I am trying to put all the app controls together as close as possible to minimize mouse travel and
           maximize efficiency. Will keep refining it until I am happy with it.

20110217:  Fixed SCRIPT_RETURN_DATA plugin to ignore empty key.

           Fixed YAHOO plugin empty symbols when downloading.

           Fixed QUOTE_DATABASE_SET plugin date format. TYPE parm now defaults to 'Stock' if not used.

           Consolidated some control panel buttons into the configure button.

20110218:  Updated icons.

           Added context menu to the data panel that allows number precision to be set.

           Updated Grid, Refresh and Crosshair control panel buttons to have context menus for settings.

20110219:  Added new plugins FILE_DIALOG and INDICATOR_PLOT_INDEX_DELETE

           Added new CSV scripts into Scripts/quote

           Modified the QUOTE_DATABASE_SET syntax with a DATE_FORMAT parm to help with various date formats.

           Added new indicators DonchianChannels.pl and CandlePatterns.pl and ROC1.pl

           Added a menu option in the Script Panel to run an external script not listed in the database.

20110220:  Added EXCHANGE_SEARCH_DIALOG plugin.

           Added ExchangeDataBase back into lib.

           Improved the CSV scripts to use the exchange dialog.

           NOTE: CVS users will need to do a complete make distclean for this update. Changes to lib
           require it.

20110221:  Fixed bug ID 3187465 - 0.37-dev can't delete indicator.

           Fixed bug ID: 3187597 - 0.37-dev script button icon.

           Added new plugin INDICATOR_PLOT_DATE_GET as per xley request.
