@@ -93,7 +93,11 @@ list of <a href="CHANGELOG-0.37">changes</a> and <a
     <li><a href="CORREL.html">CORREL</a></li>
     <li><a href="DATA_WINDOW.html">DATA_WINDOW</a></li>
     <li><a href="DIV.html">DIV</a></li>
+    <li><a href="EXCHANGE_SEARCH_DIALOG.html">EXCHANGE_SEARCH_DIALOG</a><br>
+    </li>
     <li><a href="FI.html">FI</a></li>
+    <li><a href="FILE_DIALOG.html">FILE_DIALOG</a><br>
+    </li>
     <li><a href="FONT_DIALOG.html">FONT_DIALOG</a></li>
     <li><a href="GROUP_DATABASE_DELETE.html">GROUP_DATABASE_DELETE</a></li>
     <li><a href="GROUP_DATABASE_LIST.html">GROUP_DATABASE_LIST</a></li>
@@ -118,6 +122,9 @@ list of <a href="CHANGELOG-0.37">changes</a> and <a
     <li><a href="INDICATOR_PLOT_COLOR_COMPARE_INDEX.html">INDICATOR_PLOT_COLOR_COMPARE_INDEX</a></li>
     <li><a href="INDICATOR_PLOT_COLOR_COMPARE_VALUE.html">INDICATOR_PLOT_COLOR_COMPARE_VALUE</a></li>
     <li><a href="INDICATOR_PLOT_COLOR_SET.html">INDICATOR_PLOT_COLOR_SET</a></li>
+    <li><a href="INDICATOR_PLOT_DATE_GET.html">INDICATOR_PLOT_DATE_GET</a></li>
+    <li><a href="INDICATOR_PLOT_INDEX_DELETE.html">INDICATOR_PLOT_INDEX_DELETE</a><br>
+    </li>
     <li><a href="INDICATOR_PLOT_INDEX_RANGE.html">INDICATOR_PLOT_INDEX_RANGE</a></li>
     <li><a href="INDICATOR_PLOT_INDEX_SHIFT.html">INDICATOR_PLOT_INDEX_SHIFT</a><br>
     </li>
